# Fitness-App

./: .dockerignore  .env.dist  .gitignore  README.md  docker-compose.develop.yml  docker-compose.testing.yml  docker-compose.yml  env.example  package-lock.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions/lint/: action.yml
.github/actions/unit-tests/: action.yml
.github/workflows/: build-and-push.yml  deploy_dev.yml  deploy_develop.yml  deploy_testing.yml  frontend-pr.yml  lint.yml  unit-tests.yml
.github/workflows/actions/lint/: action.yml
.github/workflows/actions/security-scan/: action.yml  scan.sh
.github/workflows/actions/unit-tests/: action.yml
activity-tracking/: .dockerignore  Dockerfile  README.md  config.js  config.json  eslint.config.mjs  jest-mongodb-config.js  jest.config.js  jest.setup.js  logging.js  package-lock.json  package.json  server.js
activity-tracking/__tests__/: mongo.db.test.js  simple-db.test.js  simple.test.js
activity-tracking/__tests__/helpers/: exerciseHelpers.js
activity-tracking/__tests__/models/: exercise.model.test.js
activity-tracking/__tests__/routes/: exercise.routes.test.js
activity-tracking/cypress/: cypress.config.js
activity-tracking/cypress/e2e/: exercise.cy.js
activity-tracking/middleware/: rate-limiter.js
activity-tracking/routes/: exercises.js
activity-tracking/utils/: setup.js  teardown.js
analytics/: .env  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  schema.graphql
analytics/templates/: graphql_playground.html
analytics/tests/: conftest.py  test_analytics.py  test_analytics_integration.py  test_analytics_unit.py
authservice/: .dockerignore  .dockerignore   Dockerfile  README.md  build.gradle.kts
authservice/src/main/java/com/authservice/auth/: AuthApplication.java
authservice/src/main/java/com/authservice/auth/controller/: AuthController.java
authservice/src/main/java/com/authservice/auth/request/: SignupRequest.java
authservice/src/main/resources/: application.properties
frontend/: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  eslint.config.mjs  jest.config.js  jest.config.mjs  jsconfig.json  nginx.conf  package-lock.json  package.json  setupTests.js  troubleshooting_nginx_integration.md
frontend/src/: App.js  App.test.js  api.js  jest.setup.js
frontend/src/__tests__/: App.alt.test.js  App.test.js  api.test.js
frontend/src/__tests__/components/: journal.accessibility.test.js  journal.test.js  login.accessibility.test.js  login.test.js  navbar.accessibility.test.js  recipes.test.js  signup.accessibility.test.js  signup.test.js  statistics.test.js  trackExercise.accessibility.test.js  trackExercise.test.js
frontend/src/components/: ErrorBoundary.js  footer.js  journal.js  login.js  navbar.js  recipe.js  recipes.css  recipes.js  recipesFallback.js  signup.js  statistics.js  trackExercise.js
frontend/src/utils/: authTest.js  customDateInput.js  errorHandle.js  securityTest.js  test-utils.js
frontend/utils/: authTest.js  securityTest.js
nginx/: default.conf
recipes/: .dockerignore  .env  .flake8  Dockerfile  README.md  app.py  babel.cfg  messages.pot  pyproject.toml  requirements.txt  schema.graphql
recipes/static/: styles.css
recipes/templates/: display_json.html  graphql_playground.html  index.html
recipes/tests/: conftest.py  test_recipes.py
recipes/translations/en/LC_MESSAGES/: messages.mo  messages.po
recipes/translations/es/LC_MESSAGES/: messages.mo  messages.po
