[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["diana-create <dianamuse9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
ariadne = "0.23.0"
blinker = "^1.8.2"
click = "^8.1.7"
flake8-import-order = "^0.18.1"
flask = "^3.0.3"
flask-cors = "^5.0.0"
flask-pymongo = "^2.3.0"
flask-sqlalchemy = "^3.1.1"
graphql-core = "^3.2.5"
gunicorn = "23.0.0"
idna = "^3.10"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
markupsafe = "2.1.3"
packaging = "^24.1"
pymongo = "4.10.1"
python = ">=3.8.1,<4.0"
python-dotenv = "^1.0.1"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.36"
starlette = "^0.41.0"
typing-extensions = "^4.12.2"
werkzeug = "^3.0.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-import-order = "^0.18.1"
pytest = "^8.3.3"
mongomock = "^4.2.0.post1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79
extend-ignore = "E203,W503"
import-order-style = "google"  # Options: 'google', 'pep8', etc.
application-import-names = ["your_project_name"]

[tool.isort] ##  A tool to sort imports automatically
profile = "black"
line_length = 79
multi_line_output = 3