[tool.poetry]
name = "analytics"
version = "0.1.0"
description = ""
authors = ["diana-create <dianamuse9@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
ariadne = "0.23.0"
blinker = "^1.8.2"
click = "^8.1.7"
flask = "^3.0.3"
flask-cors = "^5.0.0"
flask-pymongo = "^2.3.0"
flask-sqlalchemy = "^3.1.1"
graphql-core = "^3.2.5"
gunicorn = "23.0.0"
idna = "^3.10"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.4"
markupsafe = "2.1.3"
packaging = "^24.1"
pymongo = "4.10.1"
python = ">=3.8.1,<4.0"
python-dotenv = "^1.0.1"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.36"
starlette = "^0.41.0"
typing-extensions = "^4.12.2"
werkzeug = "^3.0.4"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
pytest = "^8.3.3"
mongomock = "^4.2.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79
extend-ignore = "E203,W503"
import-order-style = "google"  # Options: 'google', 'pep8', etc.
application-import-names = ["app"] 

[tool.isort]
profile = "black"  # Use Black-compatible formatting
line_length = 79
combine_as_imports = true
force_sort_within_sections = true  # Ensure consistent sorting within groups
lines_between_sections = 1  # Add one blank line between groups (e.g., STDLIB and THIRDPARTY)
no_lines_before = ["THIRDPARTY"]  # Prevent blank lines between third-party imports